<resources>
    <string name="app_name">FRI ToDo</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- Strings related to login -->
    <string name="login_text">Prihlásiť sa</string>
    <string name="signup_text">Registrovať sa</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="priezvisko">Priezvisko</string>
    <string name="datum_narodenia">Dátum narodenia</string>
    <string name="datum">Dátum</string>
    <string name="tudijn_program">Študijný program</string>
    <string name="heslo">Heslo</string>
    <string name="email">Email</string>
    <string name="meno">Meno</string>
    <string name="os_cislo">Osobné číslo</string>
    <string name="title_activity_control">ControlActivity</string>
    <string name="title_activity_main">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="pass_conf">Potvrdenie hesla</string>
    <string name="menu_header">FRI ToDo List app</string>

    <string-array name="Programy">
        <item>Informatika</item>
        <item>Informatika a riadenie</item>
        <item>Manažment</item>
        <item>Počítačové inžinierstvo</item>
        <item>Sieťové technológie</item>
    </string-array>

    <!-- Resources pre action bar animacie -->
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="nazov">Názov</string>
    <string name="popis">Popis</string>
    <string name="prida_povinnos">Pridať povinnosť</string>
    <string name="todo_zoznamy">ToDo zoznamy</string>
    <string name="calendar">Kalendár</string>
    <string name="account">Účet</string>
    <string name="deadline">Deadline</string>
    <string name="upravit">Upraviť</string>
    <string name="potvrdit_zmeny">Potvrdiť zmeny</string>
    <string name="povinnosti">Povinnosti na zvoleneý deň:</string>
</resources>