<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/twNazov"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/nazov"
        android:textColor="@color/black"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tw_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nazov"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:textSize="18dp"/>

    <TextView
        android:id="@+id/twPopis"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/popis"
        android:textColor="@color/black"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tw_popis"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:textSize="18dp"/>

    <TextView
        android:id="@+id/twDatum"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/datum_narodenia"
        android:textColor="@color/black"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tw_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/datum_narodenia"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:textSize="18dp"/>


</LinearLayout>


